# bayesbookpy

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  intro.html  intro.qmd  main.py  pyproject.toml  references.bib  references.html  search.json  summary.html
.github/workflows/: publish.yml
_freeze/chapters/01_concepts_and_data_analysis/01_01_intro/execute-results/: html.json
_freeze/chapters/01_concepts_and_data_analysis/01_02_basics_of_probability/execute-results/: html.json
_freeze/chapters/01_concepts_and_data_analysis/01_03_frequentist_inference/execute-results/: html.json
_freeze/chapters/01_concepts_and_data_analysis/01_04_tossing_a_coin/execute-results/: html.json
_freeze/intro/execute-results/: html.json
chapters/01_concepts_and_data_analysis/: 01_01_intro.html  01_01_intro.qmd  01_02_basics_of_probability.html  01_02_basics_of_probability.qmd  01_03_frequentist_inference.html  01_03_frequentist_inference.qmd  01_04_tossing_a_coin.html  01_04_tossing_a_coin.qmd  01_05_continuous_variables.html  01_05_continuous_variables.qmd
chapters/appendices/: binary_variable.html  binary_variable.qmd  continuous_variable.html  continuous_variable.qmd
site_libs/bootstrap/: bootstrap-42ae851e2d99599eb2b707f4a9612bf9.min.css
